end of semester 5

--- a/Semestr5/AlgorytmyEwolucyjne/lista5/zadanie2.ipynb
+++ b/Semestr5/AlgorytmyEwolucyjne/lista5/zadanie2.ipynb
@@ -99,15 +99,12 @@
         "from deap import base, creator, tools, gp\n",
         "from sympy import sympify\n",
         "\n",
-        "# Load the data\n",
         "X, y = load_diabetes(return_X_y=True)\n",
         "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "\n",
-        "# Define protected division function\n",
         "def protected_div(a, b):\n",
         "    return a / b if b != 0 else 1\n",
         "\n",
-        "# Set up GP\n",
         "pset = gp.PrimitiveSet(\"MAIN\", X.shape[1])\n",
         "pset.addPrimitive(np.add, 2)\n",
         "pset.addPrimitive(np.subtract, 2)\n",
@@ -118,7 +115,6 @@
         "pset.addPrimitive(np.tan, 1)\n",
         "pset.addEphemeralConstant(\"rand\", lambda: random.uniform(-1, 1))\n",
         "\n",
-        "# Create GP framework\n",
         "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
         "creator.create(\"Individual\", gp.PrimitiveTree, fitness=creator.FitnessMax)\n",
         "\n",
@@ -130,10 +126,8 @@
         "toolbox.register(\"compile\", gp.compile, pset=pset)\n",
         "\n",
         "def eval_individual(individual):\n",
-        "    # Compile the individual's expression into a function\n",
         "    func = toolbox.compile(expr=individual)\n",
         "    \n",
-        "    # Generate new feature for training and testing\n",
         "    try:\n",
         "        new_feature_train = np.array([func(*row) for row in x_train])\n",
         "        x_train_augmented = np.hstack((x_train, new_feature_train.reshape(-1, 1)))\n",
@@ -141,21 +135,18 @@
         "        new_feature_test = np.array([func(*row) for row in x_test])\n",
         "        x_test_augmented = np.hstack((x_test, new_feature_test.reshape(-1, 1)))\n",
         "\n",
-        "        # Train a model and calculate R^2\n",
         "        model = RandomForestRegressor(random_state=0)\n",
         "        model.fit(x_train_augmented, y_train)\n",
         "        predictions = model.predict(x_test_augmented)\n",
         "        return r2_score(y_test, predictions),\n",
         "    except Exception as e:\n",
-        "        # Handle any errors during evaluation\n",
-        "        return -np.inf,  # Assign a very low fitness score\n",
+        "        return -np.inf,  \n",
         "\n",
         "toolbox.register(\"evaluate\", eval_individual)\n",
         "toolbox.register(\"mate\", gp.cxOnePoint)\n",
         "toolbox.register(\"mutate\", gp.mutUniform, expr=toolbox.expr, pset=pset)\n",
         "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
         "\n",
-        "# Run the evolution\n",
         "population = toolbox.population(n=50)\n",
         "hof = tools.HallOfFame(1)\n",
         "\n",
@@ -170,29 +161,24 @@
         "    population, toolbox, cxpb=0.5, mutpb=0.2, ngen=20, stats=stats, halloffame=hof, verbose=True\n",
         ")\n",
         "\n",
-        "# Retrieve the best individual\n",
         "best_individual = hof[0]\n",
         "print(\"Best individual (raw):\", best_individual)\n",
         "best_func = toolbox.compile(expr=best_individual)\n",
         "\n",
-        "# Display the mathematical expression\n",
         "best_expression = str(best_individual)\n",
         "print(\"Best individual (mathematical expression):\", sympify(best_expression))\n",
         "\n",
-        "# Generate the new feature using the best individual\n",
         "new_feature_train = np.array([best_func(*row) for row in x_train])\n",
         "x_train_augmented = np.hstack((x_train, new_feature_train.reshape(-1, 1)))\n",
         "\n",
         "new_feature_test = np.array([best_func(*row) for row in x_test])\n",
         "x_test_augmented = np.hstack((x_test, new_feature_test.reshape(-1, 1)))\n",
         "\n",
-        "# Evaluate the final R^2\n",
         "model = RandomForestRegressor(random_state=0)\n",
         "model.fit(x_train_augmented, y_train)\n",
         "predictions = model.predict(x_test_augmented)\n",
         "final_r2 = r2_score(y_test, predictions)\n",
         "\n",
-        "# Final output\n",
         "print(\"Final R^2 with best feature:\", final_r2)"
       ]
     },
